--- a/QingDict/StatusWindow.xib
+++ b/QingDict/StatusWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9531"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AppDelegate" customModule="QingDict" customModuleProvider="target"/>
@@ -48,7 +48,7 @@
                             </box>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eKP-xp-YsH">
                                 <rect key="frame" x="253" y="4" width="29" height="26"/>
-                                <buttonCell key="cell" type="disclosure" bezelStyle="roundedDisclosure" image="7C870077-F380-4940-B52C-A119EF5DAD72" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="O1S-m7-zHM">
+                                <buttonCell key="cell" type="disclosure" bezelStyle="roundedDisclosure" image="28DF804D-79E8-4D8E-ADA1-0D215F9A047B" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="O1S-m7-zHM">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
@@ -103,10 +103,10 @@
                                                                     <subviews>
                                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="M7O-xu-7MQ">
                                                                             <rect key="frame" x="5" y="2" width="276" height="22"/>
-                                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" title="n.实用；主义" id="cC8-jw-FKq">
+                                                                            <textFieldCell key="cell" lineBreakMode="truncatingTail" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" title="n.实用；主义" drawsBackground="YES" id="cC8-jw-FKq">
                                                                                 <font key="font" metaFont="systemThin" size="13"/>
                                                                                 <color key="textColor" white="0.51557256712147659" alpha="1" colorSpace="deviceWhite"/>
-                                                                                <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="deviceWhite"/>
+                                                                                <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                             </textFieldCell>
                                                                         </textField>
                                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BYs-LR-C8z">
@@ -192,7 +192,7 @@
         <customObject id="v4H-hi-Mh4" customClass="NSTitlebarAccessoryViewController"/>
     </objects>
     <resources>
-        <image name="7C870077-F380-4940-B52C-A119EF5DAD72" width="1" height="1">
+        <image name="28DF804D-79E8-4D8E-ADA1-0D215F9A047B" width="1" height="1">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
